--- a/src/styles/components/_gig-list.scss
+++ b/src/styles/components/_gig-list.scss
@@ -1,6 +1,8 @@
 .gig-list{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    
+    display: grid;
+    gap: 32px;
+    grid-template-columns: repeat(4,1fr);
+    width: 1400px;
+    margin: 0 auto;
+    margin-top: 50px;
 }
