--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 @import 'components/app-header';
 @import 'components/toy-filter';
 @import 'components/gig-preview';
+@import 'components/gig-list';
 
 
 // VIEWS
