--- a/src/styles/components/_gig-preview.scss
+++ b/src/styles/components/_gig-preview.scss
@@ -1,5 +1,86 @@
-.preview{
+.preview {
     width: 325px;
     height: 400px;
     border: 1px solid #e4e5e7;
+    .gig-footer {
+        align-items: center;
+        clear: both;
+        border-top: 1px solid #efeff0;
+        height: 60px;
+    }
+    .gig-title {
+        font-size: 16px;
+        cursor: pointer;
+        color: #222325;
+        line-height: 22px;
+        font-weight: 400;
+        height: 43px;
+        width: 100%;
+        overflow: hidden;
+        padding: 0 12px 5px;
+        margin-top: 5px;
+        text-decoration: none;
+        margin-bottom: 0px;
+        font-stretch: 100%;
+        transition: 0.15s ease-in-out;
+        &:hover {
+            color: #1dbf73;
+        }
+    }
+    .gig-rating {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 12px;
+        font-size: 14px;
+        line-height: 21px;
+        height: 40px;
+        svg {
+            vertical-align: -0.16em;
+        }
+        .comment-counter {
+            color: #b5b6ba;
+            font-weight: 400;
+            margin-left: 2px;
+        }
+    }
+    .gig-card-img {
+        height: 195px;
+        object-fit: cover;
+        width: 100%;
+    }
+    .gig-mini-user {
+        height: 54px;
+        padding: 12px 12px 8px;
+        display: flex;
+        font-stretch: 100%;
+        img {
+            border-radius: 50%;
+            width: 24px;
+            height: 24px;
+            object-fit: cover;
+            margin: auto 0;
+        }
+        .seller-identifiers {
+            width: calc(100% - 24px);
+            margin-left: 8px;
+            font-size: 14px;
+            line-height: 120%;
+            div {
+                color: #222325;
+                line-height: 18px;
+                height: 18px;
+                color: #222325;
+                font-weight: 600;
+            }
+            span {
+                color: #74767e;
+                font-weight: 500;
+                line-height: 21px;
+            }
+        }
+    }
+}
+.rating-cosmetic {
+    color: #ffbe5b;
+    font-weight: 700;
 }
