--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,6 @@
 // VIEWS
 @import 'components/toy-app';
 @import 'components/toy-edit';
-@import 'components/toy-dashboard';
+@import 'components/gig-home';
 @import 'components/toy-details';
 
