--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -3,15 +3,15 @@
 }
 
 html {
-    font-family: ubuntu, sans-serif;
-    color: $blue;
-    font-weight: bold;
+    // font-family: ubuntu, sans-serif;
+    // color: $blue;
+    // font-weight: bold;
 }
 
 body {
     margin: 0;
     font-family: macanLight;
-    font-weight: 600;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
