--- a/src/styles/components/_gig-preview.scss
+++ b/src/styles/components/_gig-preview.scss
@@ -3,10 +3,49 @@
     height: 400px;
     border: 1px solid #e4e5e7;
     .gig-footer {
+        display: flex;
+        justify-content: space-between;
         align-items: center;
         clear: both;
         border-top: 1px solid #efeff0;
         height: 60px;
+        padding: 10px 12px;
+        svg{
+            fill: #b5b6ba;
+        }
+        .price-container {
+            display: flex;
+            flex-direction: column;
+            .price-tag {
+                color: #74767e;
+                font-family: macanBold;
+                font-size: 10px;
+                font-weight: 700;
+                letter-spacing: 0.5px;
+                text-transform: uppercase;
+                display: inline-block;
+                vertical-align: top;
+                padding: 2px 0 0;
+                line-height: 20px;
+            }
+            .gig-price {
+                text-align: end;
+                color: #404145;
+                text-align: right;
+                font-weight: 600;
+                font-size: 18px;
+                line-height: 20px;
+                
+            }
+            sup {
+                top: 2px;
+                margin-left: 1px;
+                font-size: 70%;
+                line-height: 0;
+                position: relative;
+                vertical-align: super;
+            }
+        }
     }
     .gig-title {
         font-size: 16px;
@@ -64,7 +103,10 @@
             width: calc(100% - 24px);
             margin-left: 8px;
             font-size: 14px;
+            height: 39px;
             line-height: 120%;
+            font-weight: 600;
+            // font-family: macanBold;
             div {
                 color: #222325;
                 line-height: 18px;
@@ -74,7 +116,7 @@
             }
             span {
                 color: #74767e;
-                font-weight: 500;
+                font-weight: 600;
                 line-height: 21px;
             }
         }
