--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -8,25 +8,36 @@
         width: 1400px;
         margin: auto auto;                    
         .left-side{                
-            width: 50%;            
-            .sub-left-side{
-                width: 100%;
+            // width: 50%;  
+                
                 .mini-dis{
                     font-size: 40px;
                     line-height: 120%;
                     font-weight: 700;
                 }
+                
                 .search-input{
-                    width:90%;
+                    width:40%;
+                }
+                .search-icon{
+                    width:2%;
+                    color: black;
+                    background-color: white;
+                    border: 1px solid white;
+                    margin: 0px;
                 }
                 .search-btn{
                     width:10%;
-                    background-color: #19a463;
+                    background-color: #4ce9a0;
                     font-weight: bold;
                     color: white;
-                    border: 1px solid #19a463;
+                    border: 1px solid #4ce9a0;
+                    &:hover{
+                        background-color:#19a463;
+                        border: 1px solid #19a463;
+                    }
                 }
-            }
+            
             
         }
         
