--- a/src/styles/setup/_typography.scss
+++ b/src/styles/setup/_typography.scss
@@ -17,3 +17,8 @@
     font-family: macanLight;
     src: url('/src/assets/fonts/macan-light.woff2');
 }
+
+@font-face {
+    font-family: macan;
+    src: url('/src/assets/fonts/macan-regular.woff2');
+}
