--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import 'components/toy-filter';
 @import 'components/gig-preview';
 @import 'components/gig-list';
+@import 'components/gig-log-page';
 
 
 // VIEWS
