--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,8 @@
 @import 'components/gig-preview';
 @import 'components/gig-list';
 @import 'components/gig-log-page';
+@import 'components/gig-details';
+@import 'components/gig-sidebar';
 
 
 // VIEWS
