--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -7,6 +7,14 @@
     .gig-details {
         width: 57.42%;
         margin-right: 9.15%;
+        h2 {
+            font-size: 20px;
+            line-height: 28px;
+            padding-bottom: 25px;
+            margin: 0;
+            color: #404145;
+            font-weight: 700;
+        }
         .gig-overview {
             margin-bottom: 24px;
             h1 {
