--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,8 @@
 @import 'components/gig-log-page';
 @import 'components/gig-details';
 @import 'components/gig-sidebar';
+@import 'components/gig-description';
+@import 'components/gig-profile';
 
 
 // VIEWS
