--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -18,28 +18,49 @@
                 
                 .search-input{
                     width:40%;
-                }
-                .search-icon{
-                    width:2%;
-                    color: black;
-                    background-color: white;
-                    border: 1px solid white;
-                    margin: 0px;
+                    padding: 12px 20px;
+                    margin: 8px 0;
+                    display: inline-block;
+                    border: 1px solid #ccc;
+                    // border-radius: 4px;
+                    box-sizing: border-box;
                 }
                 .search-btn{
                     width:10%;
-                    background-color: #4ce9a0;
-                    font-weight: bold;
+                    background-color: #4CAF50;
                     color: white;
-                    border: 1px solid #4ce9a0;
+                    padding: 14px 20px;
+                    margin: 7.5px 0;
+                    border: none;
+                    // border-radius: 4px;
+                    cursor: pointer;
                     &:hover{
-                        background-color:#19a463;
-                        border: 1px solid #19a463;
+                        background-color: #45a049;
                     }
                 }
+
+                .search-icon{
+                    width:5%;
+                    font-size: 18pt;
+                    padding: 4.5px 0px 9px 0px;
+                    margin: 7.5px 0;
+                    color: black;
+                    border: none;
+                    background-color: white;
+                    cursor: auto;
+                    
+                    
+                    
+                }
+                
             
             
         }
         
     }
+}
+
+.main-home{
+    width: 1400px;
+    margin: 40px auto; 
 }
