--- a/src/styles/components/_gig-profile.scss
+++ b/src/styles/components/_gig-profile.scss
@@ -1,10 +1,66 @@
-.profile-card{
-    .profile-info{
-        img{
+.profile-card {
+    display: flex;
+    padding-bottom: 24px;
+    .profile-info {
+        img {
             height: 110px;
             width: 110px;
             object-fit: cover;
             border-radius: 50%;
+        }
+    }
+    .profile-label {
+        padding-left: 15px;
+        color: #62646a;
+        .username-line {
+            font-weight: 700;
+            line-height: 20px;
+            padding-bottom: 5px;
+        }
+        .one-liner {
+            line-height: 130%;
+        }
+        button {
+            transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+            margin-top: 20px;
+            color: #62646a;
+            background: none;
+            cursor: pointer;
+            display: inline-block;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 100%;
+            padding: 12px 24px;
+            position: relative;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 4px;
+            border: 1px solid rgb(98, 100, 106);
+            &:hover {
+                background: #74767e;
+                color: #fff;
+            }
+        }
+        .rating-stars {
+            fill: #ffb33e;
+            padding-top: 5px;
+            font-size: 14px;
+            line-height: 21px;
+            span {
+                padding-left: 4px;
+                color: #62646a;
+            }
+            b {
+                color: #ffb33e;
+                padding-left: 4px;
+            }
+            svg {
+                margin-left: 4px;
+                margin-bottom: 4px;
+                &:first-child {
+                    margin-left: 0;
+                }
+            }
         }
     }
 }
