--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -77,5 +77,17 @@
     }
     .sidebar {
         width: 33.6%;
+        position: sticky;
+        top: 86px;
     }
+}
+
+
+
+.put-carousel{
+    width: 100%;
+    height: 500px;
+    text-align: center;
+    background-color:#c5c6c9;
+    margin-bottom: 64px;
 }
