--- a/src/styles/components/_gig-preview.scss
+++ b/src/styles/components/_gig-preview.scss
@@ -2,6 +2,11 @@
     width: 325px;
     height: 400px;
     border: 1px solid #e4e5e7;
+    &:hover {
+        .gig-title{
+            color: #1dbf73;
+        }
+    }
     .gig-footer {
         display: flex;
         justify-content: space-between;
@@ -60,9 +65,7 @@
         margin-bottom: 0px;
         font-stretch: 100%;
         transition: 0.15s ease-in-out;
-        &:hover {
-            color: #1dbf73;
-        }
+        
     }
     .gig-rating {
         display: flex;
@@ -87,6 +90,7 @@
         height: 195px;
         object-fit: cover;
         width: 100%;
+        cursor: pointer;
     }
     .gig-mini-user {
         height: 54px;
