--- a/src/styles/components/_gig-profile.scss
+++ b/src/styles/components/_gig-profile.scss
@@ -1,7 +1,8 @@
 .profile-card {
-    display: flex;
-    padding-bottom: 24px;
+    margin-bottom: 64px;
     .profile-info {
+        display: flex;
+        padding-bottom: 24px;
         img {
             height: 110px;
             width: 110px;
@@ -61,6 +62,38 @@
                     margin-left: 0;
                 }
             }
+        }
+    }
+    .stats-desc {
+        border: 1px solid #dadbdd;
+        margin-top: 0;
+        border-radius: 3px;
+        padding: 24px;
+        color: #62646a;
+        line-height: 130%;
+        ul {
+            display: flex;
+            flex-flow: row wrap;
+            list-style: none;
+            list-style-image: none;
+            margin: 0;
+            li {
+                color: #74767e;
+                width: 50%;
+                padding-bottom: 16px;
+                strong {
+                    display: block;
+                    padding-top: 4px;
+                    color: #62646a;
+                }
+            }
+        }
+        article {
+            line-height: 150%;
+            text-align: left;
+            border-top: 1px solid #dadbdd;
+            padding-top: 15px;
+            margin: 0;
         }
     }
 }
