--- a/src/styles/components/_main-carousel.scss
+++ b/src/styles/components/_main-carousel.scss
@@ -40,3 +40,10 @@
 .main-home-1{
   padding: 0 40px 0 40px;
 }
+
+.carousel {
+  position: relative;
+  text-align: center;
+  box-sizing: border-box;
+  right:10px;
+}
