--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -1,104 +1,121 @@
-.gig-home{
+.gig-home {
     background-color: #013f1d;
     display: flex;
     color: whitesmoke;
     height: 630px;
     padding-left: 40px;
-    .gig-home-top{
+    .gig-home-top {
         width: 1400px;
-        margin: auto auto;                    
-        .left-side{                
-            // width: 50%;  
-                
-                .mini-dis{
-                    font-size: 40px;
-                    line-height: 120%;
-                    font-weight: 700;
+        margin: auto auto;
+        .left-side {
+            width: 650px;
+            form {
+                display: flex;
+                position: relative;
+                span {
+                    position: absolute;
+                    top: 16px;
+                    left: 16px;
+                    fill: #74767e;
                 }
-                
-                .search-input{
-                    width:40%;
-                    padding: 12px 20px;
-                    margin: 8px 0;
-                    display: inline-block;
-                    border: 1px solid #ccc;
-                    // border-radius: 4px;
-                    box-sizing: border-box;
+            }
+            .mini-dis {
+                font-size: 48px;
+                line-height: 56px;
+                margin: 0;
+                padding-bottom: 24px;
+                font-weight: 700;
+                i {
+                    font-family: domaine;
+                    font-weight: 500;
                 }
-                .search-btn{
-                    width:10%;
-                    background-color: #4CAF50;
-                    color: white;
-                    padding: 14px 20px;
-                    margin: 7.5px 0;
-                    border: none;
-                    // border-radius: 4px;
-                    cursor: pointer;
-                    &:hover{
-                        background-color: #45a049;
-                    }
-                }
+            }
 
-                .search-icon{
-                    width:5%;
-                    font-size: 18pt;
-                    padding: 4.5px 0px 9px 0px;
-                    margin: 7.5px 0;
-                    color: black;
-                    border: none;
-                    background-color: white;
-                    cursor: auto;
-                    
-                    
-                    
+            .search-input {
+                // width: auto;
+                padding: 12px 20px;
+                margin: 0;
+                display: inline-block;
+                border: 1px solid #dadbdd;
+                flex: 1 1 auto;
+                border-right: 0;
+                border-radius: 4px 0 0 4px;
+                color: #404145;
+                height: 48px;
+                padding-left: 44px;
+                box-sizing: border-box;
+                font-size: 16px;
+            }
+            .search-btn {
+                background-color: #1dbf73;
+                font-weight: 700;
+                font-size: 16px;
+                height: 48px;
+                color: white;
+                padding: 12px 24px;
+                cursor: pointer;
+                transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+                border-radius: 0 4px 4px 0;
+                border: 1px solid transparent;
+                &:hover {
+                    background-color: #19a463;
                 }
-                
-            
-            
+            }
+
+            .search-icon {
+                width: 5%;
+                font-size: 18pt;
+                padding: 4.5px 0px 9px 0px;
+                margin: 7.5px 0;
+                color: black;
+                border: none;
+                background-color: white;
+                cursor: auto;
+            }
         }
-        
     }
 }
-.markit-home{
+.markit-home {
     width: 100%;
     min-height: 705px;
     background-color: #f1fdf7;
 }
-
-.main-home-1{
-    width: 1400px;
-    margin: 40px auto;
-    
-
+::placeholder {
+    color: #95979d;
+    letter-spacing: 0.5px;
 }
 
-.main-home-2{
+.main-home-1 {
+    width: 1400px;
+    margin: 40px auto;
+}
+
+.main-home-2 {
     width: 1400px;
     margin: auto auto;
     min-height: 705px;
     display: grid;
-    grid-template-areas:
-    'left-side right-side';   
+    grid-template-areas: "left-side right-side";
     gap: 10px;
     padding: 10px;
-    .right-side{
-        grid-area: right-side;  
+    .right-side {
+        grid-area: right-side;
         margin: auto auto;
         cursor: pointer;
         -webkit-box-direction: normal;
-        -webkit-font-smoothing: antialiased;   
+        -webkit-font-smoothing: antialiased;
     }
-    .left-side{
-        grid-area: left-side; 
-        margin: auto 0px;       
-        h2{
+    .left-side {
+        grid-area: left-side;
+        margin: auto 0px;
+        h2 {
             font-size: 32px;
             line-height: 120%;
             font-weight: 700;
             // padding-bottom: 24px;
-            color:#404145;
+            color: #404145;
         }
-        h6{
+        h6 {
             padding-bottom: 8px;
             display: flex;
             -webkit-box-align: start;
@@ -113,9 +130,9 @@
             // margin-block-start: 2.33em;
             // margin-block-end: 2.33em;
             margin-inline-start: 0px;
-            margin-inline-end: 0px;            
+            margin-inline-end: 0px;
         }
-        p{
+        p {
             font-size: 18px;
             line-height: 26px;
             margin: 0;
