--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -25,6 +25,7 @@
                 margin: 0;
                 padding-bottom: 24px;
                 font-weight: 700;
+                font-family: macanBold;
                 i {
                     font-family: domaine;
                     font-weight: 500;
