--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -7,6 +7,7 @@
         width: 1400px;
         margin: 0 auto;        
         background-color: rgba(95, 158, 160, 0);
+        // padding: 0 32px;
         ul{
             list-style-type: none;
             margin: 0;
