--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -3,10 +3,11 @@
     display: flex;
     color: whitesmoke;
     height: 630px;
-    padding-left: 40px;
+    // padding-left: 40px;
     .gig-home-top {
         width: 1400px;
         margin: auto auto;
+        padding: 0 32px;
         .left-side {
             width: 650px;
             form {
@@ -89,6 +90,7 @@
 .main-home-1 {
     width: 1400px;
     margin: 40px auto;
+    padding: 0 32px;
 }
 
 .main-home-2 {
@@ -98,7 +100,7 @@
     display: grid;
     grid-template-areas: "left-side right-side";
     gap: 10px;
-    padding: 10px;
+    padding: 0 32px;
     .right-side {
         grid-area: right-side;
         margin: auto auto;
