--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -64,7 +64,10 @@
                         }
                         svg {
                             margin-left: 4px;
-                            margin-bottom: 4px;
+                            width: 15px;
+                            position: relative;
+                            top: 1px;
+                            
                         }
                     }
                     div {
@@ -82,12 +85,10 @@
     }
 }
 
-
-
-.put-carousel{
+.put-carousel {
     width: 100%;
     height: 500px;
     text-align: center;
-    background-color:#c5c6c9;
+    background-color: #c5c6c9;
     margin-bottom: 64px;
 }
