--- a/src/styles/components/_gig-description.scss
+++ b/src/styles/components/_gig-description.scss
@@ -10,5 +10,9 @@
     }
     p {
         color: #62646a;
+        margin: 0;
+        outline: 0;
+        padding: 0;
+        line-height: 24px;
     }
 }
