--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,7 @@
 @import 'components/gig-sidebar';
 @import 'components/gig-description';
 @import 'components/gig-profile';
+@import 'components/gig-reviews';
 @import 'components/main-carousel';
 
 
