--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,6 +20,7 @@
 @import 'components/gig-profile';
 @import 'components/gig-reviews';
 @import 'components/main-carousel';
+@import 'components/agile-carousel';
 
 
 // VIEWS
