--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,14 +1,35 @@
-.full-header{
+.full-header {
     height: 70px;
     padding-top: 10px;
     background-color: #013f1d;
     color: whitesmoke;
-    .app-header{        
+    .app-header {
         width: 1400px;
-        margin: 0 auto;        
+        margin: 0 auto;
         background-color: rgba(95, 158, 160, 0);
-        // padding: 0 32px;
-        ul{
+        display: flex;
+        justify-content: space-between;
+        .logo {
+            float: left;
+            font-family: "logoFont", serif;
+            font-size: 20px;
+            span {
+                color: #4ce9a0;
+                font-weight: 900;
+            }
+        }
+        a {
+            display: block;
+            color: whitesmoke;
+            text-align: center;
+            padding: 10px;
+            text-decoration: none;
+            .not-exist {
+                color: lightgray;
+                cursor: not-allowed;
+            }
+        }
+        ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
@@ -19,33 +40,11 @@
             // background-color: #333;
             li {
                 float: right;
-                a {
-                    display: block;
-                    color: whitesmoke;
-                    text-align: center;
-                    padding: 10px;
-                    text-decoration: none;
-                    .not-exist{
-                        color: lightgray;
-                        cursor: not-allowed;
-                    }
-                  }
-                  
-                  &:hover:not(.active) {
+
+                &:hover:not(.active) {
                     color: white;
-                  }
-              }
-              .logo{
-                float: left;
-                font-family: 'logoFont', serif;
-                font-size: 20px;
-                span{
-                    color: #4ce9a0;
-                    font-weight: 900;
                 }
-              }
+            }
         }
     }
 }
-
-
