--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -47,6 +47,9 @@
                 padding-left: 44px;
                 box-sizing: border-box;
                 font-size: 16px;
+                &:focus{
+                    outline: none;
+                }
             }
             .search-btn {
                 background-color: #1dbf73;
