--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -17,7 +17,7 @@
         .logo {
             float: left;
             font-family: "logoFont", serif;
-            font-size: 20px;
+            font-size: 28px;
             span {
                 color: #4ce9a0;
                 font-weight: 900;
@@ -68,6 +68,7 @@
                 a {
                     color: #74767e;
                     transition: 0.2s;
+                    letter-spacing: 0.1px;
                 }
                 &:hover {
                     a {
