--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -1,5 +1,5 @@
 .gig-home {
-    background-color: #013f1d;
+    // background-color: #013f1d;
     display: flex;
     color: whitesmoke;
     height: 630px;
