--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,9 +1,10 @@
 .full-header {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0);
     color: #62646a;
     position: sticky;
     top: 0px;
     z-index: 10;
+    transition: background-color .5s ease;
     .app-header {
         height: 80px;
         width: 1400px;
