--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -77,6 +77,67 @@
                 background-color: white;
                 cursor: auto;
             }
+            .popular{
+                display: flex;
+                font-size: 14px;
+                line-height: 27px;
+                font-weight: 600;
+                color: #fff;
+                padding-top: 24px;
+                font: 400 16px/24px;
+                
+                ul{
+                    display: flex;
+                    width: 100%;
+                    margin-left: 12px;
+                    list-style: none;
+                    list-style-image: none;
+                    margin: 0;
+                    outline: 0;
+                    padding: 0;
+                    margin-right: 12px;
+                    margin-left: 12px;
+                    font-size: 14px;
+                    line-height: 27px;
+                    font-weight: 600;
+                    color: #fff;                    
+                    font: 400 16px/24px;
+                    
+                    li{
+                        display: flex;                                            
+                        white-space: nowrap;
+                        margin: 0;
+                        outline: 0;
+                        padding: 0;
+                        margin-right: 12px;  
+                        text-align: -webkit-match-parent;
+                        font-size: 14px;
+                        list-style: none;
+                        list-style-image: none;
+                        line-height: 27px;
+                        font-weight: 600;
+                        color: #fff; 
+                        
+                        a{
+                            background-color: transparent;
+                            line-height: 24px;
+                            font-weight: 600;
+                            color: #fff;
+                            padding: 1px 12px 0;
+                            border: 1px solid #fff;
+                            border-radius: 40px;
+                            transition: all .2s ease-in-out;
+                            z-index: 4;
+                            text-decoration: none;
+                            font-size: 14px;
+                            cursor: pointer;
+                            white-space: nowrap;
+                        }
+                    }
+                    
+                }
+
+            }
         }
     }
 }
