--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@
 
 // COMPONENTS
 @import 'components/app-header';
+@import 'components/app-footer';
 @import 'components/toy-filter';
 @import 'components/gig-preview';
 @import 'components/gig-list';
