--- a/src/styles/components/_gig-reviews.scss
+++ b/src/styles/components/_gig-reviews.scss
@@ -218,6 +218,7 @@
                         font-weight: 600;
                         font-size: 14px;
                         line-height: 21px;
+                        font-family: macanLight;
                         svg {
                             fill: #404145;
                             margin-right: 4px;
