--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,9 +1,10 @@
 .full-header {
     background-color: rgba(255, 255, 255, 0);
+    width: 100%;
     color: #62646a;
     position: sticky;
     top: 0px;
-    z-index: 10;
+    z-index: 3000;
     transition: background-color .5s ease;
     .app-header {
         height: 80px;
