--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -1,6 +1,7 @@
 .gig-page {
     max-width: 1304px;
     margin: 0 auto;
+    margin-top: 80px;
     display: flex;
     align-items: flex-start;
     padding: 32px 32px 0;
@@ -67,7 +68,6 @@
                             width: 15px;
                             position: relative;
                             top: 1px;
-                            
                         }
                     }
                     div {
