--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -3,7 +3,7 @@
     display: flex;
     color: whitesmoke;
     height: 630px;
-    margin-top:-80px;
+    // margin-top:-80px;
     // padding-left: 40px;
     .gig-home-top {
         width: 1400px;
