--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,7 +22,8 @@
 @import 'components/gig-profile';
 @import 'components/gig-reviews';
 @import 'components/main-carousel';
-@import 'components/agile-carousel';
+@import 'components/main-carousel';
+@import 'components/back_office';
 
 
 // VIEWS
