--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,6 +22,7 @@
 @import 'components/gig-reviews';
 @import 'components/main-carousel';
 @import 'components/agile-carousel';
+@import 'components/main-header-sub-menu';
 
 
 // VIEWS
