--- a/src/styles/components/_main-header-sub-menu.scss
+++ b/src/styles/components/_main-header-sub-menu.scss
@@ -97,8 +97,7 @@
     margin-top: 80px;
     transform: rotateX(90deg);
     position: fixed;
-    transition: transform .2s;
-    transition: background-color .5s ease;
+    transition: transform .2s, background-color .5s ease;
     border-top: solid lightgrey 1px;
     border-bottom: solid lightgrey 1px;
     height: 40px;
