--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,7 +24,7 @@
 @import 'components/main-carousel';
 @import 'components/agile-carousel';
 @import 'components/main-header-sub-menu';
-@import 'components/main-carousel';
+@import 'components/gig-carousel';
 @import 'components/back_office';
 
 
