remove and edit gig

--- a/src/styles/components/_back_office.scss
+++ b/src/styles/components/_back_office.scss
@@ -1,6 +1,6 @@
 .main-container{
   width: 1436px;
-  // margin: 100px auto;
+  margin: 100px auto;
 
   .edit-form{
     width: 50%;
@@ -23,4 +23,12 @@
       width: 9%;
     }
   }
+  
+}
+
+.div-preview{
+  width: 30%;
+  min-height: 30px;
+  margin: auto auto;
+  border: 1px solid black;
 }
