--- a/src/styles/components/gig-edit.scss
+++ b/src/styles/components/gig-edit.scss
@@ -29,6 +29,7 @@
                 font-size: 30px;
             }
             .img-input-container{
+                width: 100%;
                 .img-input{
                     width: 30%;
                     height: 130px;
@@ -36,6 +37,19 @@
                     padding: 10px 1.65%;
                     border: 1px solid #c5c6c9;
                     border-radius: 20px;
+                }
+                button{
+                    height: 130px;
+                    width: 30%;
+                    margin: 1.66%;
+                    padding: 10px 1.65%;
+                    border: 1px solid #c5c6c9;
+                    border-radius: 20px;
+                    background-color: white;
+                    cursor: pointer;
+                    &:hover{
+                        background-color: #e9e9e9;
+                    }
                 }
             }
         }
