--- a/src/styles/components/_gig-log-page.scss
+++ b/src/styles/components/_gig-log-page.scss
@@ -1,6 +1,6 @@
 .log-page{
-    width: 1400px;
-    margin: 0 auto;
+    width: 300px;
+    margin: auto auto;
     input {
         width: 100%;
         padding: 12px 20px;
