--- a/src/styles/components/_gig-list.scss
+++ b/src/styles/components/_gig-list.scss
@@ -2,7 +2,7 @@
     display: grid;
     gap: 32px;
     grid-template-columns: repeat(4,1fr);
-    width: 1400px;
+    max-width: 1400px;
     margin: 0 auto;
     margin-top: 80px;
 }
