--- a/src/styles/components/_main-header-sub-menu.scss
+++ b/src/styles/components/_main-header-sub-menu.scss
@@ -9,7 +9,8 @@
 
     .app-header {
         height: 40px;
-        width: 1400px;
+        max-width: 1400px;
+        width:100%;
         margin: 0 auto;
         background-color: rgba(95, 158, 160, 0);
         display: flex;
