--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,7 @@
 @import 'components/back_office';
 @import 'components/office-dashboard';
 @import 'components/gig-edit';
+@import 'components/gig-preview-carousel';
 
 
 // VIEWS
