--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -5,11 +5,11 @@
     position: sticky;
     top: 0px;
     z-index: 3000;
-    transition: background-color .5s ease;
+    transition: background-color 0.5s ease;
     .app-header {
         height: 80px;
         max-width: 1400px;
-        width:100%;
+        width: 100%;
         margin: 0 auto;
         background-color: rgba(95, 158, 160, 0);
         display: flex;
@@ -17,10 +17,62 @@
         align-items: center;
         justify-content: space-between;
         flex-wrap: nowrap;
+        .search-bar-wrapper{
+            flex: 1;
+        }
+        .search-bar-container {
+            width: 100%;
+            .search-bar {
+                max-width: 400px;
+                position: relative;
+                display: flex;
+                span {
+                    position: absolute;
+                    top: 8px;
+                    left: 8px;
+                    fill: #74767e;
+                }
+                .search-input {
+                    // width: auto;
+                    padding: 8px 7px 7px 28px;
+                    width: 100%;
+                    margin: 0;
+                    display: inline-block;
+                    border: 1px solid #dadbdd;
+                    flex: 1 1 auto;
+                    border-right: 0;
+                    border-radius: 3px 0 0 3px;
+                    color: #404145;
+                    // height: 48px;
+                    box-sizing: border-box;
+                    font-size: 15px;
+                    line-height: 17px;
+                    &:focus {
+                        outline: none;
+                    }
+                }
+                .search-btn {
+                    background-color: #1dbf73;
+                    font-weight: 700;
+                    font-size: 14px;
+                    color: white;
+                    padding: 8px 16px;
+                    cursor: pointer;
+                    transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+                    border-radius: 0 3px 3px 0;
+                    border: 1px solid transparent;
+                    &:hover {
+                        background-color: #19a463;
+                    }
+                }
+            }
+        }
+
         .logo {
             float: left;
             font-family: "logoFont", serif;
             font-size: 28px;
+            margin-right: 32px;
             span {
                 color: #4ce9a0;
                 font-weight: 900;
@@ -52,7 +104,7 @@
             // background-color: #333;
             li {
                 &:first-child {
-                    a {
+                    button {
                         color: #1dbf73;
                         font-size: 14px;
                         padding: 7px 20px;
@@ -60,6 +112,8 @@
                         border-radius: 4px;
                         line-height: 14px;
                         transition: color 0.5s ease, border 0.5s ease;
+                        background-color: #19a46300;
+                        cursor: pointer;
                         &:hover {
                             background: #19a463;
                             color: #fff;
