--- a/src/styles/components/_gig-log-page.scss
+++ b/src/styles/components/_gig-log-page.scss
@@ -3,12 +3,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.692);
     z-index: 4000;
     cursor: pointer;
+    .black-screen{
+        background-color: rgba(0, 0, 0, 0.692);
+        height: 100%;
+        width: 100%;
+        position: absolute;
+    }
     .login-container {
+        z-index: 4001;
         width: 350px;
         background-color: white;
         border-radius: 4px;
