--- a/src/styles/components/_gig-log-page.scss
+++ b/src/styles/components/_gig-log-page.scss
@@ -9,6 +9,9 @@
     width: 100%;
     z-index: 4000;
     cursor: pointer;
+    h1{
+        font-size: 2vh;
+    }
     .black-screen{
         background-color: rgba(0, 0, 0, 0.692);
         height: 100%;
